# witch-temple-finder

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  README.ru.md
include/: config.hpp  finder_utils.hpp  java_random.h
src/: location_finder.cpp  main.cpp  quad_temple_finder.cpp  seed_finder.cpp
